@@ -47,4 +47,27 @@ subtest 'from generated' => sub {
   ok $pm->content =~ m{^ here is a generated file$}m, "module contains example file";
 };
 
+subtest 'from generated' => sub {
+
+  my $tzil = Builder->from_config(
+    { dist_root => 'corpus/DZT2' },
+    { 
+      add_files => { 
+        'source/dist.ini' => simple_ini(
+          {},
+          'GatherDir',
+          '=corpus::Foo',
+          [ 'InsertExample' => { indent => 4 } ],
+        )
+      }
+    }
+  );
+
+  $tzil->build;
+
+  my($pm) = grep { $_->name eq 'lib/DZT.pm' } @{ $tzil->files };
+  
+  ok $pm->content =~ m{^    here is a generated file$}m, "module contains example file";
+};
+
 done_testing;
