@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - Add indent option
 
 0.08      2017-08-02 07:40:40 -0400
   - Migrate from Path::Class to Path::Tiny
